# template-cpp

./: .editorconfig  .env  .gitignore  .gitlab-ci.yml  .releaserc.json  .sops.yaml  .versions.json  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  LICENSE  Makefile  README.md  conanfile.txt  conftest.toml  skills-lock.json  sonar-project.properties
.agents/skills/adr/: SKILL.md
.agents/skills/cpp-benchmark-testing/: SKILL.md
.agents/skills/cpp-fuzz-testing/: SKILL.md
.agents/skills/cpp-mock-testing/: SKILL.md
.devcontainer/: README.md
.devcontainer/cpp/: devcontainer-lock.json  devcontainer.json
.devcontainer/dotnet/: devcontainer-lock.json  devcontainer.json
.devcontainer/go/: devcontainer-lock.json  devcontainer.json
.devcontainer/python/: devcontainer-lock.json  devcontainer.json
.github/skills/: README.md
.github/skills/api-documentation/: SKILL.md
.github/skills/benchmark-testing/: SKILL.md
.github/skills/fuzz-testing/: SKILL.md
.github/skills/mock-testing/: SKILL.md
.github/skills/unit-testing/: SKILL.md
.github/workflows/: doxygen.yml  semantic-release.yml  trivy.yml  trufflehog.yml
.gitlab/templates/: cmake.yml  task.yml
_codeql_build_dir/: Makefile
_codeql_build_dir/src/: Makefile
_codeql_build_dir/src/app/: LANGUAGES  Makefile
_codeql_build_dir/src/bar/: Makefile
_codeql_build_dir/src/foo/: Makefile
docs/: project-layout.md  tech-stack.md
docs/decisions/: 001-adr-cpp-dependency-manager.md
images/gtest/: Dockerfile  Dockerfile.dockerignore  README.md
scripts/: Bootstrap.ps1  README.md  Setup.ps1  bootstrap.sh  setup.sh  teardown.sh
scripts/powershell/Modules/Cmdlet/: Cmdlet.psm1
scripts/powershell/Modules/Dotenv/: Dotenv.psm1
scripts/powershell/Modules/Dotnet/: Dotnet.psm1
scripts/powershell/Modules/Git/: Git.psm1
scripts/shell/: pkg.sh
src/: CMakeLists.txt  foo.cpp  foo.hpp  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/bar/: CMakeLists.txt  bar.cpp  bar.hpp  bar_test.cpp
src/foo/: CMakeLists.txt  foo.cpp  foo.hpp  foo_test.cpp
tests/: CMakeLists.txt
tests/ontarget/: CMakeLists.txt
tests/ontarget/bar/: CMakeLists.txt  bar_test.cpp
tests/ontarget/foo/: CMakeLists.txt  foo_test.cpp
tests/policy/: conan.rego
tests/unit/: CMakeLists.txt
tests/unit/bar/: CMakeLists.txt  bar_test.cpp
tests/unit/foo/: CMakeLists.txt  foo_test.cpp  foo_test.json
tools/cmake/: conan.cmake  coverage.cmake  gtest.cmake  meta_cache.cmake  meta_compiler_cache.cmake  meta_conan.cmake  meta_coverage.cmake  meta_gtest.cmake  meta_jrun.cmake  meta_policy.cmake  meta_sanitizers.cmake  meta_utils.cmake  policy.cmake  sanitizers.cmake
